Fixed cert profile configuration